--- a/InGen/Views/MainPage.xaml
+++ b/InGen/Views/MainPage.xaml
@@ -6,7 +6,7 @@
              x:Class="InGen.MainPage"
              Title="FrontPage"
              Style="{StaticResource CustomContentPage}"
-             NavigationPage.HasNavigationBar="False">
+             Shell.NavBarIsVisible="False">
 
     <VerticalStackLayout
         VerticalOptions="Center"
